fixed minor alignment issues and handle negative levels because users.

--- a/troopsim.css
+++ b/troopsim.css
@@ -53,3 +53,7 @@ table.rtc {margin-bottom:0px;}
 .total {
     font-weight:bold;
 }
+
+.input-group {
+    min-width: 100%;
+}
